Added settings for working with pictures, "image-webpack-loader" is installed.

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img/favicon.png" type="image/png">
     <title>Salt</title>
 </head>
 <body>
@@ -11,5 +12,8 @@
         <h1>Salt</h1>
         <p>Test text</p>
     </header>
+    <main>
+        <div class="image"></div>
+    </main>
 </body>
 </html>
