Added a header structure of the page.

--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,47 @@
     <title>Salt</title>
 </head>
 <body>
-    <header>
-        <h1>Salt</h1>
-        <p>Test text</p>
+    <header class="header">
+        <a href="#" class="header__logo"></a>
+        <nav>
+            <ul class="header__list">
+                <li class="header__item">
+                    <a href="#" class="header__link">Home</a>
+                </li>
+            </ul>
+            <ul class="header__list">
+                <li class="header__item">
+                    <a href="#" class="header__link">Products</a>
+                </li>
+            </ul>
+            <ul class="header__list">
+                <li class="header__item">
+                    <a href="#" class="header__link">Services</a>
+                </li>
+            </ul>
+            <ul class="header__list">
+                <li class="header__item">
+                    <a href="#" class="header__link">Resources</a>
+                </li>
+            </ul>
+            <ul class="header__list">
+                <li class="header__item">
+                    <a href="#" class="header__link">About</a>
+                </li>
+            </ul>
+            <ul class="header__list">
+                <li class="header__item">
+                    <a href="#" class="header__link">Contact us</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
-        <div class="image"></div>
+        
     </main>
+
+    <footer>
+        
+    </footer>
 </body>
 </html>
