Corrected mistakes of a header structure of the page.

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,28 +15,18 @@
                 <li class="header__item">
                     <a href="#" class="header__link">Home</a>
                 </li>
-            </ul>
-            <ul class="header__list">
                 <li class="header__item">
                     <a href="#" class="header__link">Products</a>
                 </li>
-            </ul>
-            <ul class="header__list">
                 <li class="header__item">
                     <a href="#" class="header__link">Services</a>
                 </li>
-            </ul>
-            <ul class="header__list">
                 <li class="header__item">
                     <a href="#" class="header__link">Resources</a>
                 </li>
-            </ul>
-            <ul class="header__list">
                 <li class="header__item">
                     <a href="#" class="header__link">About</a>
                 </li>
-            </ul>
-            <ul class="header__list">
                 <li class="header__item">
                     <a href="#" class="header__link">Contact us</a>
                 </li>
@@ -48,7 +38,7 @@
     </main>
 
     <footer>
-        
+
     </footer>
 </body>
 </html>
