--- a/src/index.html
+++ b/src/index.html
@@ -9,29 +9,36 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="header__logo"></a>
-        <nav>
-            <ul class="header__list">
-                <li class="header__item">
-                    <a href="#" class="header__link">Home</a>
-                </li>
-                <li class="header__item">
-                    <a href="#" class="header__link">Products</a>
-                </li>
-                <li class="header__item">
-                    <a href="#" class="header__link">Services</a>
-                </li>
-                <li class="header__item">
-                    <a href="#" class="header__link">Resources</a>
-                </li>
-                <li class="header__item">
-                    <a href="#" class="header__link">About</a>
-                </li>
-                <li class="header__item">
-                    <a href="#" class="header__link">Contact us</a>
-                </li>
-            </ul>
-        </nav>
+        <div class="header__wrapper">
+            <div class="header__logo-wrapper">
+                <a href="/" class="header__logo">
+                    <img src="./img/logo.svg" alt="SALT Group is a world leader in authentication and security." class="header__logo-pic">
+                </a>
+            </div>
+            
+            <nav>
+                <ul class="header__list">
+                    <li class="header__item">
+                        <a href="#" class="header__link">Home</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">Products</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">Services</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">Resources</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">About</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">Contact us</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         
