--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
                 </a>
             </div>
             
-            <nav>
+            <nav class="header__nav">
                 <ul class="header__list">
                     <li class="header__item">
                         <a href="#" class="header__link">Home</a>
